Modified the webpage to include dotted borders around the image and the subparagraphs (+ the headers associated with each paragraph)

--- a/recipes/styles.css
+++ b/recipes/styles.css
@@ -9,12 +9,22 @@ h1,h3 {
     color:rgb(228, 23, 177)
 }
 
+.header_body {
+    display:block;
+    border-color:white;
+    border-style:dashed;
+    padding:15px;
+    margin:10px;
+}
 
 img {width:50%;
     height:auto;
     display:block;
     margin-left:auto;
-    margin-right:auto;}
+    margin-right:auto;
+    border-style:dashed;
+    padding: 40px;
+    border-color: white}
 
 h1 {
     text-align:center;
@@ -22,6 +32,8 @@ h1 {
     font-size:48px;
     
 }
+
+
 
 li,p {
     font-family:IBM Plex Sans;
